--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@
         <div class="logo-section">
             <div class="logo-section"><img src="preview.png" alt="" style="width: 100px;"></div><span> BTEC LEVEL 3 Project <br>In Creative Media</span>
         </div>
+        <div class="logo"><img src="preview.png" alt="" style="width: 100px;"><span> BTEC LEVEL 3 Project <br>In Creative Media</span></div>
+        <div class="hamburger" id="hamburger">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+        </div>
         <div class="nav-links">
-            <a href="demo.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
             <a href="tours.html">Tours</a>
             <a href="gall.html">Gallery</a>
