--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 
     <nav>
+      <div>
         <div class="logo-section">
             <div class="logo-section"><img src="preview.png" alt="" style="width: 100px;"></div><span> BTEC LEVEL 3 Project <br>In Creative Media</span>
         </div>
@@ -21,6 +22,7 @@
             <div class="line"></div>
             <div class="line"></div>
         </div>
+       </div>
         <div class="nav-links">
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
